PlaylistFragment: Reformat.